[workspace]
resolver = "2"

[package]
name = "secret_network_getrandom_contract"
version = "0.1.0"
authors = ["Luca Spinazzola"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
schemars = "0.8.16"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", features = ["random"] }
getrandom = { version = "0.2", features = ["custom"] }
getrandom-runtime-seeded = "1.0"
thiserror = "1.0.57"


# Used only for schema generation
cosmwasm-schema = { version = "1.2.1", optional = true }

[[bin]]
name = "schema"
required-features = ["schema"]
